--- a/app/src/main/res/anim/rotatebutton.xml
+++ b/app/src/main/res/anim/rotatebutton.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" android:fillAfter="true" android:fillEnabled="true">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true" android:fillEnabled="true"
+    android:interpolator="@android:anim/anticipate_overshoot_interpolator">
+
     <rotate xmlns:android="http://schemas.android.com/apk/res/android"
         android:fromDegrees="0"
         android:toDegrees="40"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="500" >
+        android:duration="500">
     </rotate>
+
 </set>
