--- a/app/src/main/res/anim/rotatebuttonback.xml
+++ b/app/src/main/res/anim/rotatebuttonback.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" android:fillAfter="true" android:fillEnabled="true">
+<set xmlns:android="http://schemas.android.com/apk/res/android" android:fillAfter="true" android:fillEnabled="true"
+    android:interpolator="@android:anim/anticipate_overshoot_interpolator">
     <rotate xmlns:android="http://schemas.android.com/apk/res/android"
         android:fromDegrees="40"
         android:toDegrees="0"
