--- a/app/src/main/res/layout/elemento_lista_categorias.xml
+++ b/app/src/main/res/layout/elemento_lista_categorias.xml
@@ -9,25 +9,25 @@
         android:id="@+id/severidad_categoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/TextAppearance.AppCompat.Large"
         android:elegantTextHeight="true"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/primaryText" />
 
     <TextView
         android:id="@+id/nombre_categoria"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/TextAppearance.AppCompat.Large"
         android:elegantTextHeight="true"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/primaryText" />
 
 </LinearLayout>
