--- a/app/src/main/res/layout/activity_login_principal.xml
+++ b/app/src/main/res/layout/activity_login_principal.xml
@@ -59,7 +59,8 @@
                     android:hint="@string/user_username"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:imeOptions="actionNext" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -73,8 +74,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/user_password"
                     android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
+                    android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true" />
