--- a/app/src/main/res/layout/dialog_dasa_detail_body.xml
+++ b/app/src/main/res/layout/dialog_dasa_detail_body.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20dp">
     <TextView
         android:id="@+id/dialog_dasa_detail_total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fecha"/>
+        android:text="Fecha"
+        android:layout_weight="2" />
 
     <TextView
         android:id="@+id/dialog_dasa_detail_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nombre Categoria"/>
+        android:text="Nombre Categoria"
+        android:layout_weight="2"/>
+    </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,11 +40,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 1"/>
+                android:text="@string/dasa_label_1"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_1"/>
+                android:id="@+id/view_dasa_1"
+                android:layout_weight="5"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical|end" />
         </LinearLayout>
             <ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
@@ -50,11 +71,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 2"/>
+                android:text="@string/dasa_label_2"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_2"/>
+                android:id="@+id/view_dasa_2"
+                android:layout_weight="5"
+                android:gravity="center_vertical|end"
+                android:textAlignment="gravity"/>
         </LinearLayout>
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -76,11 +103,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 3"/>
+                android:text="@string/dasa_label_3"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_3"/>
+                android:id="@+id/view_dasa_3"
+                android:layout_weight="5"
+                android:gravity="center_vertical|end"
+                android:textAlignment="gravity"/>
         </LinearLayout>
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -102,11 +135,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 4"/>
+                android:text="@string/dasa_label_4"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_4"/>
+                android:id="@+id/view_dasa_4"
+                android:layout_weight="5"
+                android:gravity="center_vertical|end"
+                android:textAlignment="gravity"/>
         </LinearLayout>
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -127,11 +166,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 5"/>
+                android:text="@string/dasa_label_5"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_5"/>
+                android:id="@+id/view_dasa_5"
+                android:layout_weight="5"
+                android:gravity="center_vertical|end"
+                android:textAlignment="gravity"/>
         </LinearLayout>
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -152,11 +197,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 6"/>
+                android:text="@string/dasa_label_6"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_6"/>
+                android:id="@+id/view_dasa_6"
+                android:layout_weight="5"
+                android:gravity="center_vertical|end"
+                android:textAlignment="gravity"/>
         </LinearLayout>
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -177,11 +228,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 7"/>
+                android:text="@string/dasa_label_7"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_7"/>
+                android:id="@+id/view_dasa_7"
+                android:layout_weight="5"
+                android:gravity="center_vertical|end"
+                android:textAlignment="gravity"/>
         </LinearLayout>
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -202,11 +259,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item 8"/>
+                android:text="@string/dasa_label_8"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:textAlignment="gravity"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/view_dasa_8"/>
+                android:id="@+id/view_dasa_8"
+                android:layout_weight="5"
+                android:gravity="center_vertical|end"
+                android:textAlignment="gravity"/>
         </LinearLayout>
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
@@ -216,5 +279,6 @@
             android:layout_marginBottom="25dp"
              />
     </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
