--- a/app/src/main/res/layout/activity_breathing_game.xml
+++ b/app/src/main/res/layout/activity_breathing_game.xml
@@ -1,22 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="com.bluecoreservices.anxietymonitor2.breathingGame">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+
+    <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.bluecoreservices.anxietymonitor2.breathingGame">
+    android:clipToPadding="false"
+    android:clipChildren="false"
+    android:background="#ffffff">
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:clipChildren="false"
+        android:id="@+id/respButton"
+        android:layout_alignParentBottom="true"
+        android:clipToPadding="false"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp">
+
+        <com.bluecoreservices.anxietymonitor2.SimpleDrawingView
+            android:id="@+id/simpleDrawingView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/quoteContainer">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:padding="20dp"
+                android:textColor="#ffffff"
+                android:background="#28000000"
+                android:textSize="20dp"
+                android:clipToPadding="false"
+                android:elegantTextHeight="true"
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/quoteText"
+                android:clickable="false" />
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/bc"
-        android:layout_alignParentBottom="true"
-        android:layout_alignWithParentIfMissing="false"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="bottom|center_horizontal" />
+        android:layout_alignParentTop="true"
+        android:clipToPadding="false"
+        android:paddingTop="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:textColor="#ffffff"
+            android:textSize="80dp"
+            android:elegantTextHeight="true"
+            android:clipToPadding="false"
+            android:id="@+id/countDownTF" />
+    </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
