Agregado clase de formato de fechas con soporte a multilenguaje y arreglado los formatos de fechas de los detalles (dasa y categorias) además de agregó la funcionalidad para registrar el uso del juego de respiracion

--- a/app/src/main/res/layout/dialog_dasa_detail_body.xml
+++ b/app/src/main/res/layout/dialog_dasa_detail_body.xml
@@ -12,14 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Fecha"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        android:gravity="left|center_vertical" />
 
     <TextView
         android:id="@+id/dialog_dasa_detail_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nombre Categoria"
-        android:layout_weight="2"/>
+        android:layout_weight="2"
+        android:autoText="false"
+        android:gravity="center_vertical|right" />
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
