--- a/app/src/main/res/layout/elemento_lista_categorias.xml
+++ b/app/src/main/res/layout/elemento_lista_categorias.xml
@@ -3,31 +3,45 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:id="@+id/contenedor_lista_categorias">
-
-    <TextView
-        android:id="@+id/severidad_categoria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elegantTextHeight="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_gravity="center_vertical"
-        android:textColor="@color/primaryText" />
-
-    <TextView
-        android:id="@+id/nombre_categoria"
-        android:layout_weight="1"
+    android:id="@+id/contenedor_lista_categorias"
+    android:paddingEnd="20dp"
+    android:paddingStart="20dp">
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center_vertical|center_horizontal">
+        <TextView
+            android:id="@+id/severidad_categoria"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elegantTextHeight="false"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textAlignment="center"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/primaryText"
+            android:singleLine="true" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="9"
+        android:gravity="left|center_vertical">
+    <TextView
+        android:id="@+id/nombre_categoria"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:elegantTextHeight="true"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginRight="10dp"
         android:layout_gravity="center_vertical"
-        android:textColor="@color/primaryText" />
+        android:textColor="@color/primaryText"
+        android:singleLine="true" />
+    </RelativeLayout>
 
 </LinearLayout>
