Corregido algunos bugs del menu y de el instrumento dasa

--- a/app/src/main/res/layout/activity_breathing_game.xml
+++ b/app/src/main/res/layout/activity_breathing_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.bluecoreservices.anxietymonitor2.breathingGame">
+    tools:context="com.bluecoreservices.anxietymonitor.breathingGame">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -41,7 +41,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp">
 
-        <com.bluecoreservices.anxietymonitor2.SimpleDrawingView
+        <com.bluecoreservices.anxietymonitor.SimpleDrawingView
             android:id="@+id/simpleDrawingView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
