--- a/app/src/main/res/layout/content_add_patient.xml
+++ b/app/src/main/res/layout/content_add_patient.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.bluecoreservices.anxietymonitor2.add_patient"
+    tools:context="com.bluecoreservices.anxietymonitor.add_patient"
     tools:showIn="@layout/activity_add_patient">
 
     <LinearLayout
