--- a/app/src/main/res/layout/activity_add_catego.xml
+++ b/app/src/main/res/layout/activity_add_catego.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.bluecoreservices.anxietymonitor2.add_catego">
+    tools:context="com.bluecoreservices.anxietymonitor.add_catego">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
