--- a/app/src/main/res/layout/activity_add_therapist.xml
+++ b/app/src/main/res/layout/activity_add_therapist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.bluecoreservices.anxietymonitor2.add_therapist">
+    tools:context="com.bluecoreservices.anxietymonitor.add_therapist">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
