--- a/app/src/main/res/layout/activity_listado_pacientes.xml
+++ b/app/src/main/res/layout/activity_listado_pacientes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.bluecoreservices.anxietymonitor2.ListadoPacientes">
+    tools:context="com.bluecoreservices.anxietymonitor.ListadoPacientes">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
