--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.bluecoreservices.anxietymonitor2.MainActivity">
+    tools:context="com.bluecoreservices.anxietymonitor.MainActivity">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
