--- a/app/src/main/res/layout/activity_principal_modulos.xml
+++ b/app/src/main/res/layout/activity_principal_modulos.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.bluecoreservices.anxietymonitor2.principalModulos">
+    tools:context="com.bluecoreservices.anxietymonitor.principalModulos">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
