--- a/app/src/main/res/layout/content_add_therapist.xml
+++ b/app/src/main/res/layout/content_add_therapist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.bluecoreservices.anxietymonitor2.add_therapist"
+    tools:context="com.bluecoreservices.anxietymonitor.add_therapist"
     tools:showIn="@layout/activity_add_therapist">
     <LinearLayout
         android:layout_width="match_parent"
