--- a/app/src/main/res/layout/dialog_catego_detail_body.xml
+++ b/app/src/main/res/layout/dialog_catego_detail_body.xml
@@ -1,30 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
-    <TextView
-        android:id="@+id/dialog_catego_detail_date"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fecha"/>
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/dialog_catego_detail_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fecha"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/dialog_catego_detail_catName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nombre Categoria"
+                    android:layout_weight="1"
+                    android:gravity="left|center_vertical"
+                    android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/dialog_catego_detail_catName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nombre Categoria"/>
-
-    <TextView
-        android:id="@+id/dialog_catego_detail_catSeverity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Severidad"/>
-
-    <TextView
-        android:id="@+id/dialog_catego_detail_catDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Detalle"/>
-
+                <TextView
+                    android:id="@+id/dialog_catego_detail_catSeverity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Severidad"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:visibility="invisible" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <com.github.lzyzsd.circleprogress.ArcProgress
+                        android:id="@+id/view_catego_seek"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        custom:arc_finished_color="@color/colorPrimaryDark"
+                        custom:arc_text_color="@color/colorPrimaryDark"
+                        custom:arc_unfinished_color="@color/secondaryText"
+                        custom:arc_max="100"
+                        custom:arc_stroke_width="10dp"
+                        android:layout_gravity="center" />
+                    </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/dialog_catego_detail_catDetails_wrapper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/detail_label"/>
+                <TextView
+                    android:id="@+id/dialog_catego_detail_catDetails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
